fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC06AdGroupRule.dsl
test 1 adGroupEvent:
    2019/01/24 01:12:34:
        adGroupEvent:
            media: "YSS"              # 媒体
            accountId: 610006         # アカウントID
            campaignId: 620006        # キャンペーンID
            adGroupId: 630006         # 広告グループID
            query: "query1"           # query